          not single URI for each download entry. Enables mirroring feature.
        - Advanced error message in download size check.
      - Methods/Curl:
        - Detect HTTP/FTP/HTTPS error codes.
        - Put HTTP/FTP/HTTPS response codes into error messages.
        - Don't put Curl internal error codes into error messages.
    - System:
      - Worker:
        - Adapted to to changes in 'download' method of download manager.
        - Send also base URI to download progress so it can display it.
        - Give back transparent versioned 'remove','unpack','configure'
          actions and versionful check. Heavy hacks didn't guarantee full
          correctness, no reason to have them anymore.
        - Don't introduce action loops when uniting 'remove' and 'unpack'
          actions. This has to fix upgrading of packages containing
          'Pre-Depends' dependencies finally.
        - Put also installed and downgraded packages to package list version 1
          output for hooks. Dpkg-preconfigure should now work fully under Cupt.
        - Honor 'dpkg::pre-invoke' option.
        - Advanced error output for dpkg 'pre' actions.
        - Honor 'dpkg::post-invoke' option.
      - Resolver:
        - Use 'cupt::resolver::no-remove' option instead of 'no-remove' internal
          param.
        - Use 'cupt::resolver::type' option instead of 'resolver-type' internal
          param.
        - Check 'cupt::resolver::type' option for validity.
        - Use 'cupt::resolver::max-solution-count' option instead of
          'max-solution-cont' internal param.
        - [API break] Removed 'set_params' method, it is not needed anymore.
    - Cache:
      - Typo fix: 'incorrent' -> 'incorrect'. Thanks to
        Stefano Zacchiroli <zack@debian.org>.
      - Implemented 'easy' type of sources.list entry. Thanks to
        Stefano Zacchiroli <zack@debian.org>.
      - Don't choke on empty-for-us index files. Thanks to
        Stefano Zacchiroli <zack@debian.org>.